# MTRender

./: ..gitignore.un~  .gitignore  CMakeLists.txt  README.md  buildapk.sh
Common/: CMakeLists.txt  ESDevice.cpp  Mesh.cpp  ThreadESDevice.cpp
Common/Include/: Camera.hpp  DemoBase.h  ESDevice.hpp  Mesh.hpp  PlatformMutex.h  PlatformSemaphore.h  RingBuffer.h  ThreadBufferESDevice.h  ThreadESDevice.hpp  ThreadESDeviceBase.h  esUtil.h  esUtil_win.h
Common/Source/: DemoBase.cpp  ESDevice.cpp  Mesh.cpp  RingBuffer.cpp  ThreadBufferESDevice.cpp  ThreadESDevice.cpp  ThreadESDeviceBase.cpp  esShader.cpp  esShapes.cpp  esUtil.cpp
Common/Source/Android/: esUtil_Android.cpp
Common/Source/Win32/: esUtil_win32.cpp
DemoCreateResReturnDelay/: CMakeLists.txt  DemoReturnDelay.cpp
DemoCreateResReturnDelay/Android/: AndroidManifest.xml
DemoCreateResReturnDelay/Android/assets/: Suzanne.tga
DemoCreateResReturnDelay/Android/jni/: Android.mk
DemoCreateResReturnIM/: CMakeLists.txt  DemoReturnIM.cpp
DemoCreateResReturnIM/Android/: AndroidManifest.xml  local.properties
DemoCreateResReturnIM/Android/jni/: Android.mk
Hello_Triangle/: CMakeLists.txt  Hello_Triangle.cpp
Hello_Triangle/Android/: .buildapk.sh.un~  buildapk.sh
Hello_Triangle/Android/assets/: Suzanne.tga  monkey.babylon  splash04.tga
Hello_Triangle/Android/jni/: Android.mk  Application.mk
